--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: 'Poppins';
-  background-image: url('/public/assets/pp.jpg');
+  background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ3tlF4RtivCS8e767mYPptrULmJxlqHc79WQ&s');
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
