--- a/style.css
+++ b/style.css
@@ -15,13 +15,19 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  gap: 4rem;
+  flex-wrap: wrap;
+  padding: 2rem 0;
 }
 
 section {
   background-color: #1e1e1e;
-  min-width: 20%;
+  width: 70%;
   border-radius: 15px;
   box-shadow: rgba(0, 0, 0, 0.2) 0px 8px 24px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
 }
 
 .article1 {
@@ -41,17 +47,17 @@ article footer {
 }
 
 article h2 {
-  font-size: 1em;
+  font-size: 1.3em;
   color: rgba(190, 191, 205, 0.894);
 }
 
 article .type {
   color: rgba(190, 191, 205, 0.692);
-  font-size: 0.8rem;
+  font-size: 1em;
 }
 
 article p {
-  font-size: 0.6em;
+  font-size: 1em;
 }
 
 .en-ligne {
@@ -65,7 +71,7 @@ article p {
 
 
 .article2 {
-  margin: 1rem 0;
+  margin: 1.7rem 0;
 }
 
 .plateforme-container {
@@ -80,7 +86,7 @@ article p {
 
 .part1 {
   display: flex;
-  gap: 0.5rem;
+  gap: 1rem;
   align-items: center;
   justify-content: center;
 }
@@ -89,22 +95,23 @@ article p {
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 0.5rem 0;
 }
 
 .plateforme-name {
-  font-size: 0.8rem;
+  font-size: 1em;
   font-weight: 500;
   color: white;
 }
 
 .plateforme-container img {
-  height: 23px;
+  height: 30px;
 }
 
 a {
   text-decoration: none;
   color: rgb(160, 160, 160);
-  font-size: 0.7em;
+  font-size: 1em;
   border: 1px solid rgb(160, 160, 160);
   padding: 0.3rem 1rem;
   border-radius: 7px;
@@ -116,4 +123,10 @@ a:hover {
   border: 1px solid white;
   transition: 0.5s;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
+
+@media (min-width: 760px) {
+  section {
+    width: 20%;
+  }
 }
