--- a/style.css
+++ b/style.css
@@ -125,8 +125,16 @@ a:hover {
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 
-@media (min-width: 760px) {
+@media (min-width: 768px) and (max-width: 1024px) {
+  /* Styles pour tablettes */
+  body {
+    height: 100%;
+  }
+}
+
+@media (min-width: 1025px) {
+  /* Styles pour ordinateurs */
   section {
-    width: 20%;
+    width: 25%;
   }
 }
