--- a/style.css
+++ b/style.css
@@ -9,7 +9,8 @@ body {
   background-image: url('https://i.ibb.co/m8VXwYN/IMG-20240908-174048-410.jpg');
   background-repeat: no-repeat;
   background-size: cover;
-  height: 100vh;
+  max-height: 100%;
+  min-height: 100vh;
   width: 100%;
   backdrop-filter: blur(26px);
   display: flex;
@@ -44,6 +45,9 @@ article header img {
 
 article footer {
   padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.3rem;
 }
 
 article h2 {
@@ -127,9 +131,10 @@ a:hover {
 
 @media (min-width: 768px) and (max-width: 1024px) {
   /* Styles pour tablettes */
-  body {
-    height: 100%;
-  }
+  /* body {
+    max-height: 100%;
+    min-height: 100vh;
+  } */
 }
 
 @media (min-width: 1025px) {
